<resources>
    <string name="appirator_app_title">NES Emulator</string>
    <string name="appirator_market_url">market://details?id=%s</string>
    <string name="rate_title">Rate %s</string>
    <string name="rate_message">If you enjoy using %s, would you mind taking a moment to rate it? Thanks for your support!</string>
    <string name="rate">Yes, Rate %s</string>
    <string name="rate_later">Remind me later</string>
    <string name="rate_cancel">No, Thanks</string>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="ga_trackingId">UA-88423865-2</string>
    <string name="ga_appName">NES Emulator</string>
    <string name="ga_appVersion">1.1.1</string>
    <string name="send_slot">分享</string>
    <string name="send_slot_subject" formatted="false">%s (%s)</string>
    <string name="send_slot_message" formatted="false">"Save state for: %s
Date: %s %s
This file is intended for %s
%s"</string>
    <string name="empty_desc">this component has no textual description</string>
    <string name="menu_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="exit">Exit</string>
    <string name="ok">Ok</string>
    <string name="about">ABOUT</string>
    <string name="todays_top_apps">"TODAY'S TOP APPS"</string>
    <string name="internet_needed">In the Lite version, this feature is ad-supported and is only available when ads are displayed. Please connect to the internet and try again.</string>
    <string name="adblocker_installed">In the Lite version, this feature is ad-supported. Please uninstall any ad blocking software or purchase the Pro version if you want to use this feature.</string>
    <string name="too_slow">"We are sorry, the emulator is not responding. Your device's performance seems to be too low to run this app."</string>
    <string name="act_emulator_invalid_cheat">"Invalid cheat: '%s'"</string>
    <string name="act_emulator_load_game_failed">游戏加载失败</string>
    <string name="act_emulator_save_state_failed">存档失败</string>
    <string name="act_emulator_load_state_failed">读档失败</string>
    <string name="act_remote_controller_select_server">Select server</string>
    <string name="act_remote_controller_set_manually">Set server manually</string>
    <string name="dialog_select_port_title">Select port</string>
    <string name="act_slot_popup_menu_delete">删除</string>
    <string name="act_slot_popup_menu_send">分享</string>
    <string name="act_slot_hint">Long press on item to show pop up menu</string>
    <string name="game_menu_fds_eject_disk">EJECT DISK</string>
    <string name="game_menu_fds_insert_disk">INSERT DISK</string>
    <string name="game_menu_fds_switch_side">SWITCH DISK SIDE</string>
    <string name="game_menu_reset">重玩</string>
    <string name="game_menu_load">读档</string>
    <string name="game_menu_save">存档</string>
    <string name="game_menu_cheats">CHEATS</string>
    <string name="game_menu_screenshot">TAKE SCREENSHOT</string>
    <string name="game_menu_settings">设置</string>
    <string name="game_menu_back_to_past">REWIND</string>
    <string name="game_zapper_collision">Zapper is in collision with remote controller!</string>
    <string name="toast_cheats_enabled">Number of cheats enabled: %d</string>
    <string name="act_game_screenshot_failed">Failed to save screenshot</string>
    <string name="act_game_screenshot_saved">Screenshot saved to: %s</string>
    <string name="act_tcs_reset">RESET</string>
    <string name="general_pref">设置</string>
    <string name="game_pref">设置</string>
    <string name="key_pref">Keyboard/Gamepad Preferences</string>
    <string name="key_profile_pref">Keyboard/Gamepad profile: %s</string>
    <string name="key_select_profile_pref">Select Profile</string>
    <string name="key_profile_edit">Edit Profile</string>
    <string name="key_profile_select_input_method">Select Input Method</string>
    <string name="key_profile_new">New profile</string>
    <string name="game_pref_ui_pal_ntsc">Video Mode</string>
    <string name="game_pref_ui_pal_ntsc_desc">Try switching in case of graphical glitches</string>
    <string name="game_pref_ui_timeshift">Allow Rewinding</string>
    <string name="game_pref_ui_timeshift_desc">Enabling may slow down emulation on some devices</string>
    <string name="game_pref_ui_vibration">Vibrations</string>
    <string name="game_pref_ui_vibration_no_vibrator">This device does not have an available vibrator</string>
    <string name="general_pref_wifi_controlable">Wifi Control</string>
    <string name="general_pref_smoothing">Image Smoothing</string>
    <string name="general_pref_wifi_controlable_desc">Allow controlling of app over wifi</string>
    <string name="general_pref_system_font">System Font</string>
    <string name="general_pref_system_font_desc">Use default Android font for UI</string>
    <string name="general_pref_q_save_load">Quick Save/Load</string>
    <string name="general_pref_q_save_load_desc">Double tap to quick-save (right half of screen) or quick-load (left half of screen)</string>
    <string name="general_pref_sound_volume">音量大小</string>
    <string name="general_pref_turbo">Turbo Buttons</string>
    <string name="general_pref_mute">静音</string>
    <string name="general_pref_load_sav_files">Load Battery Saves</string>
    <string name="general_pref_save_sav_files">Save Battery Saves</string>
    <string name="general_pref_load_sav_files_desc">See Help for more info</string>
    <string name="general_pref_ddpad">Dynamic D-Pad</string>
    <string name="general_pref_ddpad_desc">Enable dynamically positioned D-pad</string>
    <string name="general_pref_ddpad_deactivate">Dynamic D-Pad was deactivated</string>
    <string name="general_pref_ddpad_activate">In the Lite version of the app, this feature is automatically deactivated when exiting a game. If you want to use the feature without restrictions, purchase the PRO version of the app.</string>
    <string name="general_pref_ddpad_goto_play">Go to Google Play</string>
    <string name="general_pref_fastforward_deactivate">Fast forward button was deactivated</string>
    <string name="general_pref_screen_layout_deactivate">Screen layout was reset</string>
    <string name="general_pref_ab_button">A+B Button</string>
    <string name="general_pref_fastforward_button">Enable FF Button</string>
    <string name="general_pref_fastforward_toggle">Togglable FF</string>
    <string name="general_pref_fastforward_toggle_desc">Behavior of FF button (or gamepad key)</string>
    <string name="general_pref_fullscreen">强制全屏</string>
    <string name="game_pref_zapper">Zapper Gun</string>
    <string name="pref_other_settings">Other Settings</string>
    <string name="pref_video_settings">Video Settings</string>
    <string name="act_cheats_dialog_add_label">CHEAT</string>
    <string name="act_cheats_dialog_chars_hint">INSERT CHEAT CODE</string>
    <string name="act_cheats_dialog_desc_hint">INSERT CHEAT DESCRIPTION</string>
    <string name="act_cheats_dialog_save">SAVE</string>
    <string name="tips_dialog_label">帮助</string>
    <string name="tips_dialog_next">下一条</string>
    <string name="tips_dialog_prev">上一条</string>
    <string name="action_general_pref">com.nostalgiaemulators.nesfull.GENERALPREF</string>
</resources>