<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:background="@drawable/game_dialog_bck" android:padding="35.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="25.0dip" android:textColor="@color/dialog_main_color" android:layout_gravity="center_vertical" android:id="@id/dialog_new_cheat_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/act_cheats_dialog_add_label" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:background="@color/dialog_main_color" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_margin="5.0dip" />
        <EditText android:id="@id/dialog_new_cheat_chars" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:hint="@string/act_cheats_dialog_chars_hint" android:singleLine="true" android:maxLength="11" android:inputType="textFilter|textCapCharacters|textNoSuggestions" />
        <EditText android:gravity="center|left|top" android:id="@id/dialog_new_cheat_desc" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/act_cheats_dialog_desc_hint" android:lines="5" android:inputType="textCapSentences" />
        <LinearLayout android:background="@color/dialog_main_color" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_margin="5.0dip" />
        <Button android:textColor="@color/dialog_main_color" android:layout_gravity="center_horizontal" android:id="@id/dialog_new_cheat_save" android:background="@drawable/dialog_button_shape" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/act_cheats_dialog_save" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>