<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:background="@drawable/game_dialog_bck" android:padding="35.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="25.0dip" android:textColor="@color/dialog_main_color" android:layout_gravity="center_vertical" android:id="@id/tips_dialog_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips_dialog_label" android:layout_weight="1.0" />
            <TextView android:textSize="25.0dip" android:textColor="@color/dialog_main_color" android:layout_gravity="center_vertical" android:id="@id/tips_dialog_counter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1/10" />
        </LinearLayout>
        <LinearLayout android:background="@color/dialog_main_color" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_margin="5.0dip" />
        <ScrollView android:id="@id/tips_dialog_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" />
        <LinearLayout android:orientation="horizontal" android:id="@id/tips_dialog_bottom_line" android:background="@color/dialog_main_color" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_margin="5.0dip" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textColor="@color/dialog_main_color" android:layout_gravity="right" android:id="@id/tips_dialog_prev" android:background="@drawable/dialog_button_shape" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/tips_dialog_prev" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
            <Button android:textColor="@color/dialog_main_color" android:layout_gravity="right" android:id="@id/tips_dialog_next" android:background="@drawable/dialog_button_shape" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/tips_dialog_next" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>